# llm-agent-gateway

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build.sh  default.env  docker-compose.yml  pyproject.toml  run.sh  version.sh
app/: main.py
app/agents/: agent_service.py  prompts.py
app/api/: middleware.py  routes.py  schemas.py
app/billing/: pricing.py
app/core/: concurrency.py  config.py  errors.py
app/providers/: base.py  factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py
app/utils/: token_estimator.py
tests/: test_billing.py  test_provider_factory.py
